--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 body{
+    font-family: var(--font-dm-sans);
     background-color: black;
     color: white;
 }
@@ -16,9 +17,8 @@ body{
 
 .sidebar-navegation{
     background-color: #121212;
-    border-radius: 15px;
-    padding: 0px;
-    margin-top: 20px;
+    border-radius: 8px;
+    padding: 16px 0px 0px 16px;
 }
 
 .logo{
@@ -29,7 +29,7 @@ body{
 }
 
 .sidebar-navegation .logo img{
-    width: 100px;
+    width: 120px;
 }
 
 .sidebar nav ul{
@@ -38,38 +38,32 @@ body{
 }
 
 .sidebar nav ul li {
-    color: #b3b3b3;
     padding: 10px 0px;
 }
 
 .sidebar nav ul li a{
     font-weight: 600;
     font-size: 15px;
-    font-family: 'DM Sans', sans-serif;
     color: #b3b3b3;
-    
+    text-decoration: none;
 }
 
 .library{
     background-color: #121212;
-    border-radius: 15px;
+    border-radius: 8px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     color: #b3b3b3;
-    padding: 0px;
+    padding: 4px 8px;
     font-weight: 600;
     font-size: 15px;
-    margin-top: 13px;
+    margin-top: 10px;
 }
 
 .library .library-content{
     display: flex;
     justify-content: space-between;
-}
-
-.library .library-content .fa-plus{
-    margin: 24px 10px;
 }
 
 .library .library-button{
@@ -79,8 +73,7 @@ body{
     background: transparent;
     border: 0;
     font-size: 15px;
-    font-weight: 600;
-    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -92,6 +85,12 @@ body{
     margin-right: 10px;
     font-weight: 300;
     padding-right: 8px;
+    color: #b3b3b3;
+}
+
+
+.library .library-content .fa-plus{
+    margin: 24px 10px;
 }
 
 .section-playlist{
@@ -117,18 +116,15 @@ body{
 .section-playlist-content .text{
     padding-bottom: 14px;
     color: #fff;
-    font-family: 'DM Sans', sans-serif;
 }
 
 .section-playlist-content .title{
     font-weight: 700;
-    font-family: 'DM Sans', sans-serif;
 }
 
 .section-playlist-content .subtitle{
     font-weight: 500;
     font-size: 12px;
-    font-family: 'DM Sans', sans-serif;
 }
 
 .section-playlist-content .section-playlist-button{
@@ -139,7 +135,6 @@ body{
     display: flex;
     justify-content: center;
     font-weight: 700;
-    font-family: 'DM Sans', sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -155,7 +150,7 @@ body{
 .sidebar .cookies a{
     color: #b3b3b3;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 10px;
     text-decoration: none;
 }
 
@@ -173,6 +168,47 @@ body{
     width: 170px;
     margin: 8px;
     padding: 8px;
-    font-size: 12px;
     border-radius: 20px;
+    font-size: 12px;
 }
+
+.disclaimer-premium {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #ae2896, #509bf5);
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+}
+.disclaimer-premium .text {
+   flex-shrink: 0;
+}
+.disclaimer-premium .disclaimer-premium__title {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.disclaimer-premium .disclaimer-premium__subtitle {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.disclaimer-premium button {
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 750;
+    padding: 8px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
