--- a/styles/main-content.css
+++ b/styles/main-content.css
@@ -88,7 +88,7 @@
     font-size: 16px;
     font-weight: 700;
     border-radius: 40px;
-    background-color: #a7a7a7;
+    background-color: #ffffff;
 }
 
 /* PLAYLIST */
