--- a/styles/style.css
+++ b/styles/style.css
@@ -181,8 +181,8 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(to right, #ae2896, #509bf5);
-    padding: 15px 40px;
+    background: linear-gradient(to right, #010A26, #05F283);
+    padding: 20px 40px;
     display: flex;
     justify-content: space-between;
 }
@@ -192,8 +192,8 @@ body{
 .disclaimer-premium .disclaimer-premium__title {
     color: #ffffff;
     text-transform: uppercase;
-    font-weight: 400;
-    font-size: 12px;
+    font-weight: 700;
+    font-size: 16px;
     margin-bottom: 10px;
 }
 
