--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,7 @@ body{
     background-color: #fff;
     color: #000;
     border-radius: 20px;
-    font-size: 12px;
+    font-size: 14px;
     display: flex;
     justify-content: center;
     font-weight: 700;
@@ -144,6 +144,52 @@ body{
     padding: 10px;
     border: 0px;
     width: 113px;
+    margin-top: 12px;
+}
+
+.section-podcast{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 15px;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+.section-podcast-content .podcast-text{
+    padding-bottom: 14px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-podcast-content .podcast-subtext{
+    padding-bottom: 14px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-podcast-button{
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    border: 0px;
+    width: 140px;
     margin-top: 12px;
 }
 
